--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "author": "Anfernee Joan Ng <anfernee.stacktrek@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^5.9.1",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.19",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "nodemon": "^3.0.3",
+    "prisma": "^5.9.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
