--- a/package.json
+++ b/package.json
@@ -1,23 +1,36 @@
 {
-  "name": "api-testing",
-  "version": "1.0.0",
-  "main": "dist/index.js",
-  "author": "Anfernee Joan Ng <anfernee.stacktrek@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "@prisma/client": "^5.9.1",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.11.19",
-    "dotenv": "^16.4.4",
-    "express": "^4.18.2",
-    "nodemon": "^3.0.3",
-    "prisma": "^5.9.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
-  },
-  "scripts": {
-    "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts"
-  }
+    "name": "api-testing",
+    "version": "1.0.0",
+    "main": "dist/index.js",
+    "author": "Anfernee Joan Ng <anfernee.stacktrek@gmail.com>",
+    "license": "MIT",
+    "dependencies": {
+        "@prisma/client": "^5.9.1",
+        "@quramy/jest-prisma-node": "^1.7.3",
+        "@swc/core": "^1.4.1",
+        "@swc/jest": "^0.2.36",
+        "@types/express": "^4.17.21",
+        "@types/jest": "^29.5.12",
+        "@types/node": "^20.11.19",
+        "@types/supertest": "^6.0.2",
+        "dotenv": "^16.4.4",
+        "dotenv-cli": "^7.3.0",
+        "express": "^4.18.2",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "nodemon": "^3.0.3",
+        "prisma": "^5.9.1",
+        "supertest": "^6.3.4",
+        "ts-jest": "^29.1.2",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.3.3"
+    },
+    "scripts": {
+        "build": "npx tsc",
+        "start": "node dist/index.js",
+        "dev": "nodemon src/index.ts",
+        "test": "dotenv -e .env.test -- jest",
+        "migrate:test": "dotenv -e .env.test -- npx prisma migrate deploy",
+        "migrate": "dotenv -e .env.development -- npx prisma migrate dev"
+    }
 }
